[metadata]
name = biclustlib
author = Nikita Sigal
author_email = parallax.nikitasigal@gmail.com
description = A biclustering library with datasets, evaluation measures and a benchmarking framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikitasigal/biclustlib
project_urls =
    Bug Tracker = https://github.com/nikitasigal/biclustlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy
    pandas
    aiohttp
    matplotlib
    goatools
    bottleneck
    scikit-learn
    scipy
    rpy2
    munkres

[options.packages.find]
where = src